Add the model checking mode to Lincheck tests and use a newer and faster version of it